--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "netninja",
+  "name": "robofriends",
   "version": "0.1.0",
+  "homepage":"http://iamdpunk1.github.io/robofriends",
   "private": true,
   "dependencies": {
-    "cra-template": "1.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.1",
+    "tachyons": "^4.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
